# xanel2

./: CMakeLists.txt  README.md  nvim-cc.txt  setup_build.sh
src/: assets.cpp  assets.hpp  def.hpp  game.cpp  game.hpp  main.cpp  object.cpp  object.hpp  player.cpp  player.hpp
